# Demo_Copilot

./: .gitignore  CMakeLists.txt  README.md  calculator.cpp
include/: KinematicModel.h
src/: KinematicModel.cpp  ScientificCalculator.cpp  ScientificCalculator.h  TestScientificCalculator.cpp  main.cpp  scientific_calculator.cpp  test_KinematicModel.cpp
tests/: CMakeLists.txt  KinematicModelTest.cpp
